          string style (string, style)
          string color (string, color, background color)
          position string (string, x, y)
          string X (string)
          string Y (string)
        [James Paige]

       * ${S#} Meta String for textboxes

       * Support in HSpeak for "auto strings":

          $1="My string"

          That will set the string with ID 1 to "My string"

    * getenemystat() and setenemystat() [Mike Caron]

  * Stuff only Developers Will Notice

    * Plotscripting Dictionary Documentation is now in xml format instead
      of html (but still exportable to html) [Big thanks to Mike Caron]

    * Constants for the gen()/general() array data [James Paige]

May 19 2005 [quaternion]

  * GPL Licensed source code. See LICENSE.txt

  * Added += and -= operators to Hspeak, thanks to a patch from
    The Mad Cacti and Fyrewulff

  * "Inns don't revive dead heroes" bitset now works on all Inns (bug 23)

  * "Level up for (hero)" and "(#) levels for (hero)" battle text is now
    customizable (bug 46)

  * Fixed misspellings of "enemies" as in plotscripting commands "suspend
    random enemies" and "resume random enemies" (Misspelled versions
    still work for backwards compatability)

  * New plotscripting commands: save in slot, last save slot, auto save,
    save slot used, import globals, export globals, load from slot,
    delete save. Thanks to Ysoft-entertainment and Ralph Versteegen
    (TeeEmCee)

  * It is now possible to display the save menu without actually saving
    using "save menu (false)"

  * New plotscripting commands: init mouse, mouse pixel x, mouse pixel
    y, mouse button, put mouse, mouse region, NPC at pixel
    Thanks to Ralph Versteegen (TeeEmCee)

  * Very nice plotscript buffer usage optimization. Scripts that run more
    than once take no extra space in the buffer, allowing you to write
    recursive scripts without fear of buffer-overflow. Thanks to Ralph
    Versteegen (TeeEmCee)
