@@ -1108,7 +1108,7 @@ end</example>
 		<command id="getenemystat">
 			<cannon>get enemy stat(enemy, stat)</cannon>
 			<shortname>get enemy stat</shortname>
-			<description>Returns the selected stat from the selected enemy. The first argument is the number of the enemy whose stats you want to check. The second argument is the name of the stat that you want to check. The names of the stats are also defined in your HSI file in the form stat:name.</description>
+			<description>Returns the selected stat from the selected enemy. The first argument is the number of the enemy whose stats you want to check. The second argument is the name of the stat that you want to check. The names of the stats are also defined in your HSI file in the form stat:name. </description>
 			<seealso>
 				<ref>setenemystat</ref>
 				<ref>getherostat</ref>
@@ -1118,14 +1118,62 @@ end</example>
 		<command id="setenemystat">
 			<cannon>set enemy stat(enemy, stat, value)</cannon>
 			<shortname>set enemy stat</shortname>
-			<description>Sets the selected stat of the selected enemy to the value you supply. The first argument is the number of the enemy whose stats you want to set. The second argument is the name of the stat that you want to set. The names of the stats are also defined in your HSI file in the form stat:name. The third is the new value of the stat.<lb/>Note: Stat changes are not saved in the save game.</description>
+			<description>Sets the selected stat of the selected enemy to the value you supply. The first argument is the number of the enemy whose stats you want to set. The second argument is the name of the stat that you want to set. The names of the stats are also defined in your HSI file in the form stat:name. The third is the new value of the stat. <lb/>Note: Stat changes are not saved in the save game.</description>
 			<seealso>
 				<ref>getenemystat</ref>
 				<ref>getherostat</ref>
 				<ref>setherostat</ref>
 			</seealso>
 		</command>
-	</section>
+		<command id="getenemyname">
+			<cannon>get enemy name (enemyid, stringid)</cannon>
+			<shortname>get enemy name</shortname>
+			<description>Lets you use the enemy name in a string.  The first argument is the number of the enemy you want to get the name from, second argument is the number of the string that you want to store the name of the enemy.</description>
+			<seealso>
+				<ref>setenemyname</ref>
+			</seealso>
+		</command>
+		<command id="setenemyname">
+			<cannon>set enemy name (enemyid, stringid)</cannon>
+			<shortname>set enemy name</shortname>
+			<description>Lets you set the enemy name from a string, the string length cannot be more then 16 characters, if it is more then 16 the name will be truncated.  The first argument is the number of the enemy's name you want to change, second argument is the number of the string that you supply the name of the enemy from.</description>
+			<seealso>
+				<ref>getenemyname</ref>
+			</seealso>
+		</command>
+		<command id="getenemyappearance">
+			<cannon>get enemy appearance (enemyid, appearance)</cannon>
+			<shortname>get enemy appearance</shortname>
+			<description>Returns the appearace of the enemy. Enemyid, is the enemy number that you want to return the appearance of, appearance is either picture, palette, or size. Use enemy:picture to return enemy's picture, enemy:picturesize returns the size of the enemy.</description>
+			<seealso>
+				<ref>setenemyappearance</ref>
+			</seealso>
+		</command>
+		<command id="setenemyappearance">
+			<cannon>set enemy appearance (enemyid, appearance,value)</cannon>
+			<shortname>set enemy appearance</shortname>
+			<description>Lets you set the enemy's appearance.  Enemyid is the number of the enemy's appearance that you want to change, appearance is either picture, palette, or size. Value can is the new number that you want to assign, use constants enemysize:small, enemysize:medium, or enemysize:large, when changing picture size, when changing palette use the palette number, etc...</description>
+			<seealso>
+				<ref>getenemyappearance</ref>
+			</seealso>
+		</command>
+		<command id="getenemyrewards">
+			<cannon>get enemy rewards (enemyid, reward)</cannon>
+			<shortname>get enemy rewards</shortname>
+			<description>Returns the enemy's reward values. Enemyid is the number of enemy, reward is the number of the reward you want returned. Use the following constants<li>enemy:gold</li><li>enemy:experience</li><li>enemy:item</li><li>enemy:itempercent</li><li>enemy:rareitem</li><li>enemy:rareitempercent</li><li>stealability</li><li>stealableitem</li><li>stealableitemchance</li><li>stealablerareitem</li><li>stealablerareitemchance</li></description>
+			<seealso>
+				<ref>setenemyrewards</ref>
+			</seealso>
+		</command>
+		<command id="setenemyrewards">
+			<cannon>set enemy rewards (enemyid, reward, value)</cannon>
+			<shortname>set enemy rewards</shortname>
+			<description>Lets you set enemy's rewards as well as stealible items. Enemyid is the number of enemy, reward is the number of the reward you want returned. Value is the number you want to set on reward. Use the following constants<li>enemy:gold</li><li>enemy:experience</li><li>enemy:item(0 to 255)</li><li>enemy:itempercent(0 to 100)</li><li>enemy:rareitem(0 to 255)</li><li>enemy:rareitempercent(0 to 100)</li><li>stealability(isnotstealable,stealableonce,stealableinfinity)</li><li>stealableitem(0 to 255)</li><li>stealableitemchance(0 to 100)</li><li>stealablerareitem(0 to 255)</li><li>stealablerareitemchance(0 to 100)</li></description>
+			<seealso>
+				<ref>getenemyrewards</ref>
+			</seealso>
+		</command>
+     	</section>
 	<section title="Tweaking Maps">
 		<command id="readmapblock">
 			<cannon>read map block (x,y)</cannon>
@@ -1823,6 +1871,7 @@ end</example>
 			<alias>tileconstants</alias>
 			<shortname>overhead tile</shortname>
 		</command>
+
 	</section>
 </plotscript>
 
